--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon",
+    "test": "(dropdb --if-exists test-crud-webstore && createdb test-crud-webstore) && NODE_ENV=test mocha"
   },
   "dependencies": {
+    "chai": "^4.3.7",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "knex": "^2.4.0",
+    "mocha": "^10.2.0",
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.20",
+    "pg": "^8.8.0",
+    "supertest": "^6.3.3"
   }
 }
